Fixed alignment for mobile.

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -97,6 +97,7 @@ main {
 .recipe-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     gap: 32px;
 }
